# orb-browser

./: .gitignore  README.md  agent.py  learnings.txt  orb-agent.toml  orb.toml  package.json  pyproject.toml  server.js
.claude-plugin/: marketplace.json  plugin.json
examples/: browser_use_agent.py  vision_task.py
orb_browser/: __init__.py  cli.py  client.py
orb_browser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/: index.js  package.json
skills/browser/: SKILL.md
