[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-browser"
version = "0.1.0"
description = "Browser agents that sleep for $0 and wake in 500ms on Orb Cloud"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/nextbysam/orb-browser"

[tool.setuptools.packages.find]
include = ["orb_browser*"]
