[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-browser"
version = "0.5.1"
description = "A browser in the cloud that sleeps for $0 and wakes in 500ms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
orb-browser = "orb_browser.cli:main"

[project.urls]
Homepage = "https://github.com/nextbysam/orb-browser"

[tool.setuptools.packages.find]
include = ["orb_browser*"]
